--- a/private/goexw/Resources/Common.resx
+++ b/private/goexw/Resources/Common.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="All_Categories" xml:space="preserve">
+    <value>All Categories</value>
+  </data>
   <data name="Goexw" xml:space="preserve">
     <value>GOEXW</value>
   </data>
@@ -146,5 +149,8 @@
   </data>
   <data name="MyOrders_InProgress" xml:space="preserve">
     <value>In Progress</value>
+  </data>
+  <data name="Search_In" xml:space="preserve">
+    <value>Search In</value>
   </data>
 </root>
