--- a/private/goexw/Resources/Common.zh-cn.resx
+++ b/private/goexw/Resources/Common.zh-cn.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="All_Categories" xml:space="preserve">
+    <value>所有目录</value>
+  </data>
   <data name="Goexw" xml:space="preserve">
     <value>GOEXW 网</value>
   </data>
@@ -146,5 +149,8 @@
   </data>
   <data name="MyOrders_InProgress" xml:space="preserve">
     <value>进行中</value>
+  </data>
+  <data name="Search_In" xml:space="preserve">
+    <value>查询范围</value>
   </data>
 </root>
